<resources>
    <string name="app_name"><b>NEWS</b><i>digital</i></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="latest_news">Latest News</string>
    <string name="see_all">See All</string>
    <string name="published_by">Published by</string>
    <string name="fav_save_success">Add to favorites.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_to_get_start">Register to get Started</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_already_have_an_account">or \n Already Have an account?</string>
    <string name="or_didnt_have_an_account">or \n didn\'t Have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="register_success">Successfully Registered.</string>
    <string name="register_now">Register Now</string>
    <string name="login_to_read">Login to read</string>
    <string name="no_user_found">No User Found</string>
    <string name="invalid_username_or_password">Invalid username or password</string>
    <string name="logout">Logout</string>
    <string name="hot_update">Hot Updates</string>
    <string name="something_went_wrong">Somthing went wrong</string>
</resources>