<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:id="@+id/root">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:translationZ="@dimen/_30sdp"
        android:layout_margin="@dimen/_20sdp"
        android:src="@drawable/back"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBack"
        android:layout_margin="@dimen/_20sdp"
        android:gravity="center">

        <TextView
            android:id="@+id/tvLatestNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_to_read"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:hint="@string/username"
            android:textSize="@dimen/_12sdp"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColorHint="@color/search_bar_hint_text_color"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_20sdp"/>
]

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:hint="@string/password"
            android:textSize="@dimen/_12sdp"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColorHint="@color/search_bar_hint_text_color"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_10sdp"
            android:inputType="textPassword"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:text="@string/login"
            android:textAllCaps="false"
            style="@style/SolidButtonStyle"
            android:layout_marginTop="@dimen/_30sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_didnt_have_an_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_20sdp"/>


        <TextView
            android:id="@+id/etRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_now"
            android:textColor="@color/primary"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/_20sdp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>