<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InitActivity"
    android:background="@drawable/register_bg">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/_20sdp"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_55sdp"
            android:src="@drawable/ic_logo"
            android:padding="@dimen/_5sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_16ssp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/_40sdp"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:text="@string/login"
            android:textAllCaps="false"
            style="@style/SolidButtonStyle"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:text="@string/register"
            android:textAllCaps="false"
            style="@style/StrokeButtonStyle"
            android:layout_marginTop="@dimen/_10sdp"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>