<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:id="@+id/lytSearchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/searchViewWidget"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_16sdp"
            android:layout_weight="1"
            android:background="@drawable/search_bar_bg"
            android:drawableEnd="@drawable/ic_search"
            android:hint="@string/search"
            android:fontFamily="@font/nunito"
            android:textStyle="bold"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColorHint="@color/search_bar_hint_text_color" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/ic_notofication"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lytSearchBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_16sdp">

            <TextView
                android:id="@+id/tvLatestNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latest_news"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                android:fontFamily="@font/new_york"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:id="@+id/btnSeeAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvSeeAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:textColor="@color/secondary"
                    android:textSize="16sp"
                    android:layout_margin="@dimen/_4sdp"/>

                <ImageView
                    android:id="@+id/ivSeeAll"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_blue_right_arrow"
                    android:layout_toRightOf="@+id/tvSeeAll"
                    android:layout_centerVertical="true"/>


            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHeadlines"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLatestNews"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategories"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvHeadlines"
                android:layout_marginTop="@dimen/_15sdp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLatest"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvCategories"
                android:layout_marginTop="@dimen/_15sdp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>